@@ -1,8 +1,5 @@
 package net.lenni0451.aggregatingpublisher.webui;
 
-import com.google.gson.Gson;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.lenni0451.aggregatingpublisher.AggregatingPublisher;
@@ -10,8 +7,11 @@ import net.lenni0451.aggregatingpublisher.services.PublisherService;
 import net.lenni0451.aggregatingpublisher.web.RequestHandler;
 import net.lenni0451.aggregatingpublisher.web.RequestInfo;
 import net.lenni0451.aggregatingpublisher.web.ResponseInfo;
+import net.lenni0451.commons.gson.GsonCollectors;
 import net.lenni0451.commons.gson.GsonParser;
+import net.lenni0451.commons.gson.elements.GsonArray;
 import net.lenni0451.commons.gson.elements.GsonObject;
+import net.lenni0451.commons.gson.elements.GsonPrimitive;
 
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
@@ -32,7 +32,6 @@ public class WebInterfaceHandler extends RequestHandler {
     private final Map<String, String> sessions = new ConcurrentHashMap<>();
     private final Map<String, PublishTask> tasks = new ConcurrentHashMap<>();
     private final ExecutorService executorService = Executors.newCachedThreadPool();
-    private final Gson gson = new Gson();
 
     @Override
     public ResponseInfo handle(RequestInfo request) throws Throwable {
@@ -40,103 +39,94 @@ public class WebInterfaceHandler extends RequestHandler {
 
         if (path.equals("/login")) {
             if (request.method().equalsIgnoreCase("POST")) {
-                return handleLogin(request);
+                return this.handleLogin(request);
+            } else if (request.method().equalsIgnoreCase("GET")) {
+                return this.serveResource("web/login.html", "text/html");
             } else {
-                return serveResource("web/login.html", "text/html");
+                return ResponseInfo.methodNotAllowed();
+            }
+        } else if (path.startsWith("/static/")) {
+            if (request.method().equalsIgnoreCase("GET")) {
+                String resourcePath = "web/" + path.substring(8); // Remove /static/
+                // Prevent directory traversal
+                if (resourcePath.contains("..")) return ResponseInfo.notFound();
+                String contentType = this.getContentType(resourcePath);
+                return this.serveResource(resourcePath, contentType);
+            } else {
+                return ResponseInfo.methodNotAllowed();
             }
         }
 
-        if (path.startsWith("/static/")) {
-            String resourcePath = "web/" + path.substring(8); // Remove /static/
-            // Prevent directory traversal
-            if (resourcePath.contains("..")) return ResponseInfo.methodNotAllowed();
-            String contentType = getContentType(resourcePath);
-            return serveResource(resourcePath, contentType);
-        }
-
-        // Check authentication for other endpoints
-        if (!isAuthenticated(request)) {
-            if (path.startsWith("/api/")) {
-                return ResponseInfo.of(401, "Unauthorized");
-            } else {
-                Map<String, List<String>> headers = new HashMap<>();
-                headers.put("Location", Collections.singletonList("/login"));
-                return ResponseInfo.of(302, headers, new byte[0]);
+        if (this.isAuthenticated(request)) {
+            if (path.equals("/")) {
+                return this.serveResource("web/index.html", "text/html");
+            } else if (path.equals("/api/artifacts")) {
+                return this.handleArtifacts();
+            } else if (path.equals("/api/publishers")) {
+                return this.handlePublishers();
+            } else if (path.equals("/api/clear")) {
+                if (request.method().equalsIgnoreCase("POST")) {
+                    this.fileCollector.clearFiles();
+                    return ResponseInfo.success(new GsonObject().add("status", "ok").toString());
+                } else {
+                    return ResponseInfo.methodNotAllowed();
+                }
+            } else if (path.startsWith("/api/publish/")) {
+                String publisherName = path.substring(13); // Remove /api/publish/
+                return this.handlePublish(publisherName);
+            } else if (path.startsWith("/api/progress/")) {
+                String taskId = path.substring(14); // Remove /api/progress/
+                return this.handleProgress(taskId);
+            } else if (path.equals("/api/logout")) {
+                return this.handleLogout(request);
             }
+            return ResponseInfo.notFound();
         }
 
-        if (path.equals("/")) {
-            return serveResource("web/index.html", "text/html");
+        if (request.method().equalsIgnoreCase("GET")) {
+            Map<String, List<String>> headers = new HashMap<>();
+            headers.put("Location", Collections.singletonList("/login"));
+            return ResponseInfo.of(302, headers, new byte[0]);
+        } else {
+            return ResponseInfo.methodNotAllowed();
         }
-
-        if (path.equals("/api/artifacts")) {
-            return handleArtifacts();
-        }
-
-        if (path.equals("/api/publishers")) {
-            return handlePublishers();
-        }
-
-        if (path.equals("/api/clear") && request.method().equalsIgnoreCase("POST")) {
-            this.fileCollector.clearFiles();
-            return ResponseInfo.success("{\"status\":\"ok\"}");
-        }
-
-        if (path.startsWith("/api/publish/")) {
-            String publisherName = path.substring(13); // Remove /api/publish/
-            return handlePublish(publisherName);
-        }
-
-        if (path.startsWith("/api/progress/")) {
-            String taskId = path.substring(14); // Remove /api/progress/
-            return handleProgress(taskId);
-        }
-
-        if (path.equals("/api/logout")) {
-             return handleLogout(request);
-        }
-
-        return ResponseInfo.notFound();
     }
 
-    private ResponseInfo handleLogin(RequestInfo request) throws Throwable {
+    private ResponseInfo handleLogin(final RequestInfo request) throws Throwable {
         String body = new String(request.body().readAllBytes(), StandardCharsets.UTF_8);
-        // Expecting x-www-form-urlencoded or json? Let's assume json for simplicity as we will write the frontend.
-        // Or form data from the login page. Let's do JSON.
         try {
             GsonObject json = GsonParser.parse(body).asObject();
-            String u = json.getString("username");
-            String p = json.getString("password");
-
-            if (this.username.equals(u) && this.password.equals(p)) {
+            String username = json.getString("username");
+            String password = json.getString("password");
+            if (this.username.equals(username) && this.password.equals(password)) {
                 String token = UUID.randomUUID().toString();
-                this.sessions.put(token, u);
+                this.sessions.put(token, username);
                 Map<String, List<String>> headers = new HashMap<>();
-                headers.put("Set-Cookie", Collections.singletonList("session=" + token + "; Path=/; HttpOnly; SameSite=Strict"));
-                return ResponseInfo.of(200, headers, "{\"status\":\"ok\"}".getBytes(StandardCharsets.UTF_8));
+                headers.put("Set-Cookie", List.of("session=" + token + "; Path=/; HttpOnly; SameSite=Strict"));
+                return ResponseInfo.of(200, headers, new GsonObject().add("status", "ok").toString().getBytes(StandardCharsets.UTF_8));
             }
-        } catch (Exception e) {
-            log.debug("Login failed", e);
+        } catch (Throwable t) {
+            log.debug("Login failed", t);
         }
         return ResponseInfo.of(401, "Invalid credentials");
     }
 
-    private ResponseInfo handleLogout(RequestInfo request) {
-        String token = getSessionToken(request);
+    private ResponseInfo handleLogout(final RequestInfo request) {
+        String token = this.getSessionToken(request);
         if (token != null) {
             this.sessions.remove(token);
         }
         Map<String, List<String>> headers = new HashMap<>();
         headers.put("Set-Cookie", Collections.singletonList("session=; Path=/; HttpOnly; SameSite=Strict; Max-Age=0"));
-         return ResponseInfo.of(200, headers, "{\"status\":\"ok\"}".getBytes(StandardCharsets.UTF_8));
+        return ResponseInfo.of(200, headers, new GsonObject().add("status", "ok").toString().getBytes(StandardCharsets.UTF_8));
     }
 
-    private boolean isAuthenticated(RequestInfo request) {
-        String token = getSessionToken(request);
+    private boolean isAuthenticated(final RequestInfo request) {
+        String token = this.getSessionToken(request);
         return token != null && this.sessions.containsKey(token);
     }
 
-    private String getSessionToken(RequestInfo request) {
+    private String getSessionToken(final RequestInfo request) {
         List<String> cookieHeaders = request.headers().get("Cookie");
         if (cookieHeaders != null) {
             for (String header : cookieHeaders) {
@@ -152,32 +142,25 @@ public class WebInterfaceHandler extends RequestHandler {
     }
 
     private ResponseInfo handleArtifacts() {
-        Map<String, byte[]> files = this.fileCollector.getFiles();
-        JsonArray array = new JsonArray();
-        for (String path : files.keySet()) {
-            array.add(path);
-        }
-        return ResponseInfo.success(gson.toJson(array));
+        GsonArray artifacts = this.fileCollector.getFiles().keySet().stream()
+                .map(GsonPrimitive::new)
+                .collect(GsonCollectors.toArray());
+        return ResponseInfo.success(artifacts.toString());
     }
 
     private ResponseInfo handlePublishers() {
-        JsonArray array = new JsonArray();
-        for (PublisherService service : this.publisher.getPublisherServices()) {
-             array.add(service.getName());
-        }
-        return ResponseInfo.success(gson.toJson(array));
+        GsonArray publishers = this.publisher.getPublisherServices().stream()
+                .map(PublisherService::getName)
+                .map(GsonPrimitive::new)
+                .collect(GsonCollectors.toArray());
+        return ResponseInfo.success(publishers.toString());
     }
 
-    private ResponseInfo handlePublish(String publisherName) {
-        // Find publisher
-        PublisherService target = null;
-        for (PublisherService service : this.publisher.getPublisherServices()) {
-            if (service.getName().equals(publisherName)) {
-                target = service;
-                break;
-            }
-        }
-
+    private ResponseInfo handlePublish(final String publisherName) {
+        PublisherService target = this.publisher.getPublisherServices().stream()
+                .filter(publisher -> publisher.getName().equals(publisherName))
+                .findFirst()
+                .orElse(null);
         if (target == null) {
             return ResponseInfo.notFound();
         }
@@ -185,11 +168,9 @@ public class WebInterfaceHandler extends RequestHandler {
         String taskId = UUID.randomUUID().toString();
         PublishTask task = new PublishTask();
         this.tasks.put(taskId, task);
-
-        PublisherService finalTarget = target;
         this.executorService.submit(() -> {
             try {
-                finalTarget.publish(this.fileCollector.getFiles(), (progress, step, totalSteps) -> {
+                target.publish(this.fileCollector.getFiles(), (progress, step, totalSteps) -> {
                     task.progress = progress;
                     task.step = step;
                     task.totalSteps = totalSteps;
@@ -204,27 +185,26 @@ public class WebInterfaceHandler extends RequestHandler {
             }
         });
 
-        JsonObject json = new JsonObject();
-        json.addProperty("taskId", taskId);
-        return ResponseInfo.success(gson.toJson(json));
+        GsonObject json = new GsonObject();
+        json.add("taskId", taskId);
+        return ResponseInfo.success(json.toString());
     }
 
-    private ResponseInfo handleProgress(String taskId) {
+    private ResponseInfo handleProgress(final String taskId) {
         PublishTask task = this.tasks.get(taskId);
         if (task == null) return ResponseInfo.notFound();
 
-        JsonObject json = new JsonObject();
-        json.addProperty("progress", task.progress);
-        json.addProperty("step", task.step);
-        json.addProperty("totalSteps", task.totalSteps);
-        json.addProperty("completed", task.completed);
-        json.addProperty("success", task.success);
-        json.addProperty("error", task.error);
-
-        return ResponseInfo.success(gson.toJson(json));
+        GsonObject json = new GsonObject();
+        json.add("progress", task.progress);
+        json.add("step", task.step);
+        json.add("totalSteps", task.totalSteps);
+        json.add("completed", task.completed);
+        json.add("success", task.success);
+        json.add("error", task.error);
+        return ResponseInfo.success(json.toString());
     }
 
-    private ResponseInfo serveResource(String path, String contentType) throws Throwable {
+    private ResponseInfo serveResource(final String path, final String contentType) throws Throwable {
         try (InputStream is = WebInterfaceHandler.class.getClassLoader().getResourceAsStream(path)) {
             if (is == null) return ResponseInfo.notFound();
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -243,6 +223,7 @@ public class WebInterfaceHandler extends RequestHandler {
         if (path.endsWith(".jpg")) return "image/jpeg";
         return "application/octet-stream";
     }
+
 
     private static class PublishTask {
         volatile float progress;
